update fixed LHC/RHC z-index

--- a/css/base.css
+++ b/css/base.css
@@ -6989,25 +6989,22 @@ legend[class*="col-xx-"] {
   .page-yellow .content-sub-heading {
     color: #ffc107; }
 
-.content-fix {
-  position: relative;
-  z-index: 1; }
-  .content-fix.fixed .content-fix-wrap {
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding-right: 32px;
-    padding-left: 32px;
-    position: absolute;
-    top: 0;
-    right: -16px;
-    bottom: 0;
-    left: -16px;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .content-fix.fixed .content-fix-scroll {
-    position: fixed;
-    top: 48px;
-    bottom: 0; }
+.content-fix.fixed .content-fix-wrap {
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding-right: 32px;
+  padding-left: 32px;
+  position: absolute;
+  top: 0;
+  right: -16px;
+  bottom: 0;
+  left: -16px;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar; }
+.content-fix.fixed .content-fix-scroll {
+  position: fixed;
+  top: 48px;
+  bottom: 0; }
 
 .content-fix-scroll {
   margin-right: -16px;
@@ -7020,6 +7017,7 @@ legend[class*="col-xx-"] {
   position: relative; }
 
 .footer {
+  background-color: #fafafa;
   border-top: 1px solid #e0e0e0;
   color: #9e9e9e;
   text-align: center;
