--- a/sass/theme/_footer.scss
+++ b/sass/theme/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+	background-color: $white-bg-light;
 	border-top: 1px solid $black-bg;
 	color: $black-hint;
 	text-align: center;
